app/styles/views/_quick-jump.scss
.quick-jump {
  @include single-transition(background-color, 150ms, linear);

  bottom: 0;
  left: 0;
  overflow-y: auto;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;

  > * {
    pointer-events: all;
  }

  .bar,
  .actions {
    padding: 0 $column-gutter / 2;
  }

  .bar {
    background-color: $quick-jump-background-color;
    display: block;
    height: $quick-jump-height;
    line-height: $quick-jump-height;
    position: relative;
    width: 100%;

    .progress-indicator {
      @include single-transition(all, 150ms, linear);

      border-radius: 50%;
      color: $primary-color;
      height: $quick-jump-icon-size;
      overflow: hidden;
      position: absolute;
      text-align: center;
      top: ($quick-jump-height - $quick-jump-icon-size) / 2;
      width: $quick-jump-icon-size;

      i {
        @include icon(search);

        display: block;
        line-height: $quick-jump-icon-size;
      }
    }

    input {
      @include single-transition(all, 150ms, linear);

      background-color: transparent;
      border-width: 0;
      box-shadow: none;
      display: inline-block;
      margin: 0;
      text-indent: $quick-jump-icon-size * 1.15;
      width: 100%;
    }
  }

  &.loading {
    .results .content {
      opacity: .7;
    }
  }

  &.active {
    background-color: $overlay-background-color;
    pointer-events: all;

    .bar {
      background-color: $white;
      border-bottom: 1px solid $quick-jump-background-color;

      .progress-indicator {
        background-color: $primary-color;
        color: $white;
      }
    }
  }

  .actions {
    $actions-button-size: $button-icon-size;

    position: absolute;
    right: 0;
    text-align: right;
    top: ($quick-jump-height - $actions-button-size) / 2;
    white-space: nowrap;

    .close {
      @include icon(times-circle);

      background-color: transparent;
      border-width: 0;
    }

    .change-app {
      button { @include button-icon(th); }
    }

    .add {
      button { @include button-icon(plus); }
    }

    .change-app,
    .add {
      display: inline-block;

      ul {
        @extend %dropdown;

        min-width: rem-calc(150);
        text-align: left;
      }
    }
  }

  .results {
    @include single-transition(opacity, 150ms, linear);

    background-color: $quick-jump-results-background-color;
    position: relative;
    width: 100%;

    section {
      @extend %grid-row;

      padding-bottom: $column-gutter / 2;
      padding-top: $column-gutter / 2;

      h1 {
        @extend .hide-for-small-only;
        @extend %grid-column-2;

        color: $primary-color;
        font-size: $small-font-size;
        font-weight: $font-weight-bold;
        line-height: $quick-jump-results-item-height;
        margin-bottom: 0;
        margin-top: 0;
        text-align: right;
        text-transform: uppercase;
      }

      &:nth-of-type(even) {
        background: darken($quick-jump-results-background-color, 3%);
      }

      ul {
        @extend %grid-column-small-12;
        @extend %grid-column-medium-10;
        @extend .no-bullet;

        margin-bottom: 0;
      }

      li {
        line-height: $quick-jump-results-item-height;
      }

      article {
        @extend %grid-column-12;

        cursor: pointer;

        &:hover {
          background-color: lighten($quick-jump-results-background-color, 3%);
        }
      }
    }
  }
}

